--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -267,189 +267,193 @@ SizeMax6=N
 SizeMax7=N
 SizeMax8=N
 SizeMax9=N
-SizeW10=620
-SizeW11=320
-SizeW12=915
-SizeW13=880
-SizeW14=511
-SizeW15=362
-SizeW16=400
-SizeW17=635
-SizeW18=740
-SizeW19=162
-SizeW1=1440
-SizeW20=362
-SizeW21=924
-SizeW22=812
-SizeW23=320
-SizeW24=549
-SizeW25=254
-SizeW26=663
-SizeW27=411
-SizeW28=616
-SizeW29=381
-SizeW2=557
-SizeW30=592
-SizeW31=328
-SizeW32=503
-SizeW33=750
-SizeW34=567
-SizeW35=1262
-SizeW36=517
-SizeW37=242
-SizeW38=446
-SizeW39=1106
-SizeW3=581
-SizeW40=171
-SizeW41=549
-SizeW42=580
-SizeW43=1164
-SizeW44=1848
-SizeW45=745
-SizeW46=1200
-SizeW47=568
-SizeW48=1249
-SizeW49=670
-SizeW4=167
-SizeW50=820
-SizeW51=1339
-SizeW52=559
-SizeW53=1035
-SizeW54=320
-SizeW55=270
-SizeW56=570
-SizeW57=660
-SizeW58=430
-SizeW59=904
-SizeW5=495
-SizeW60=940
-SizeW61=623
-SizeW6=832
-SizeW7=1200
-SizeW8=549
-SizeW9=408
-SizeX10=2341
-SizeX11=154
-SizeX12=735
-SizeX13=100
-SizeX14=704
-SizeX15=242
-SizeX16=44
-SizeX17=642
-SizeX18=88
-SizeX19=879
-SizeX1=240
-SizeX20=132
-SizeX21=907
-SizeX22=154
-SizeX23=198
-SizeX24=685
-SizeX25=833
-SizeX26=2492
-SizeX27=130
-SizeX28=132
-SizeX29=286
-SizeX2=88
-SizeX30=176
-SizeX31=264
-SizeX32=286
-SizeX33=661
-SizeX34=88
-SizeX35=329
-SizeX36=132
-SizeX37=839
-SizeX38=737
-SizeX39=110
-SizeX3=2405
-SizeX40=874
-SizeX41=685
-SizeX42=434
-SizeX43=2011
-SizeX44=1
-SizeX45=772
-SizeX46=0
-SizeX47=676
-SizeX48=304
-SizeX49=2347
-SizeX4=22
-SizeX50=66
-SizeX51=2089
-SizeX52=286
-SizeX53=484
-SizeX54=286
-SizeX55=242
-SizeX56=88
-SizeX57=630
-SizeX58=88
-SizeX59=286
-SizeX5=44
-SizeX60=558
-SizeX61=821
-SizeX6=636
-SizeX7=360
-SizeX8=685
-SizeX9=2476
-SizeY10=305
-SizeY11=154
-SizeY12=466
-SizeY13=481
-SizeY14=421
-SizeY15=242
-SizeY16=44
-SizeY17=336
-SizeY18=88
-SizeY19=530
-SizeY1=81
-SizeY20=132
-SizeY21=685
-SizeY22=154
-SizeY23=198
-SizeY24=203
-SizeY25=518
-SizeY26=665
-SizeY27=414
-SizeY28=132
-SizeY29=286
-SizeY2=88
-SizeY30=176
-SizeY31=264
-SizeY32=286
-SizeY33=196
-SizeY34=88
-SizeY35=169
-SizeY36=0
-SizeY37=511
-SizeY38=368
-SizeY39=110
-SizeY3=325
-SizeY40=511
-SizeY41=372
-SizeY42=471
-SizeY43=78
-SizeY44=42
-SizeY45=483
-SizeY46=44
-SizeY47=187
-SizeY48=378
-SizeY49=500
-SizeY4=22
-SizeY50=66
-SizeY51=65
-SizeY52=286
-SizeY53=217
-SizeY54=286
-SizeY55=242
-SizeY56=88
-SizeY57=236
-SizeY58=88
-SizeY59=286
-SizeY5=44
-SizeY60=55
-SizeY61=471
-SizeY6=470
-SizeY7=185
-SizeY8=366
-SizeY9=678
+SizeW10=408
+SizeW11=620
+SizeW12=320
+SizeW13=915
+SizeW14=880
+SizeW15=511
+SizeW16=362
+SizeW17=400
+SizeW18=635
+SizeW19=740
+SizeW1=779
+SizeW20=162
+SizeW21=362
+SizeW22=924
+SizeW23=812
+SizeW24=320
+SizeW25=549
+SizeW26=254
+SizeW27=663
+SizeW28=411
+SizeW29=616
+SizeW2=1440
+SizeW30=381
+SizeW31=592
+SizeW32=328
+SizeW33=503
+SizeW34=750
+SizeW35=567
+SizeW36=1262
+SizeW37=517
+SizeW38=242
+SizeW39=446
+SizeW3=557
+SizeW40=1106
+SizeW41=171
+SizeW42=549
+SizeW43=580
+SizeW44=1164
+SizeW45=1848
+SizeW46=745
+SizeW47=1200
+SizeW48=568
+SizeW49=1249
+SizeW4=581
+SizeW50=670
+SizeW51=820
+SizeW52=1339
+SizeW53=559
+SizeW54=1035
+SizeW55=320
+SizeW56=270
+SizeW57=570
+SizeW58=660
+SizeW59=430
+SizeW5=167
+SizeW60=904
+SizeW61=940
+SizeW62=623
+SizeW6=495
+SizeW7=832
+SizeW8=1200
+SizeW9=549
+SizeX10=2476
+SizeX11=2341
+SizeX12=154
+SizeX13=735
+SizeX14=100
+SizeX15=704
+SizeX16=242
+SizeX17=44
+SizeX18=642
+SizeX19=88
+SizeX1=571
+SizeX20=879
+SizeX21=132
+SizeX22=907
+SizeX23=154
+SizeX24=198
+SizeX25=685
+SizeX26=833
+SizeX27=2492
+SizeX28=130
+SizeX29=132
+SizeX2=240
+SizeX30=286
+SizeX31=176
+SizeX32=264
+SizeX33=286
+SizeX34=661
+SizeX35=88
+SizeX36=329
+SizeX37=132
+SizeX38=839
+SizeX39=737
+SizeX3=88
+SizeX40=110
+SizeX41=874
+SizeX42=685
+SizeX43=434
+SizeX44=2011
+SizeX45=1
+SizeX46=772
+SizeX47=0
+SizeX48=676
+SizeX49=304
+SizeX4=2405
+SizeX50=2347
+SizeX51=66
+SizeX52=2089
+SizeX53=286
+SizeX54=484
+SizeX55=286
+SizeX56=242
+SizeX57=88
+SizeX58=630
+SizeX59=88
+SizeX5=22
+SizeX60=286
+SizeX61=558
+SizeX62=821
+SizeX6=44
+SizeX7=636
+SizeX8=360
+SizeX9=685
+SizeY10=678
+SizeY11=305
+SizeY12=154
+SizeY13=466
+SizeY14=481
+SizeY15=421
+SizeY16=242
+SizeY17=44
+SizeY18=336
+SizeY19=88
+SizeY1=103
+SizeY20=530
+SizeY21=132
+SizeY22=685
+SizeY23=154
+SizeY24=198
+SizeY25=203
+SizeY26=518
+SizeY27=665
+SizeY28=414
+SizeY29=132
+SizeY2=81
+SizeY30=286
+SizeY31=176
+SizeY32=264
+SizeY33=286
+SizeY34=196
+SizeY35=88
+SizeY36=169
+SizeY37=0
+SizeY38=511
+SizeY39=368
+SizeY3=88
+SizeY40=110
+SizeY41=511
+SizeY42=372
+SizeY43=471
+SizeY44=78
+SizeY45=42
+SizeY46=483
+SizeY47=44
+SizeY48=187
+SizeY49=378
+SizeY4=325
+SizeY50=500
+SizeY51=66
+SizeY52=65
+SizeY53=286
+SizeY54=217
+SizeY55=286
+SizeY56=242
+SizeY57=88
+SizeY58=236
+SizeY59=88
+SizeY5=22
+SizeY60=286
+SizeY61=55
+SizeY62=471
+SizeY6=44
+SizeY7=470
+SizeY8=185
+SizeY9=366
+TabColorB54=0
 TabColorB=255
 TabColorG54=249
 TabColorG=200
